Correct sidebar widths on mobile devices

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -111,16 +111,6 @@ textarea {
         height: auto;
     }
 
-    .sidebar,
-    .sidebar-indices {
-        width: 100%;
-        border-right: none;
-        border-bottom: 1px solid #6d6e771f;
-        flex-shrink: 0;
-        position: relative;
-        max-height: none;
-    }
-
     .results,
     .contenedor-indices {
         height: auto;
