--- a/styles/pages/indices.module.scss
+++ b/styles/pages/indices.module.scss
@@ -144,6 +144,13 @@
         }
     }
 
+    .sidebar_indices {
+        width: auto;
+        border-right: none;
+        border-top: none;
+        max-height: auto;
+    }
+
     .pagina_subtitulo {
         font-size: large;
     }
